[gd_scene load_steps=31 format=2]

[ext_resource path="res://Code/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/EarthLucosa/EarthLucosa.gd" type="Script" id=2]
[ext_resource path="res://Code/PlayerAreas/SignalArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/PolygonTexture.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1535.PNG" type="Texture" id=5]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1534.PNG" type="Texture" id=6]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1537.PNG" type="Texture" id=7]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1542.PNG" type="Texture" id=8]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1536.PNG" type="Texture" id=9]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1543.PNG" type="Texture" id=10]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1539.PNG" type="Texture" id=11]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1544.PNG" type="Texture" id=12]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1540.PNG" type="Texture" id=13]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1545.PNG" type="Texture" id=14]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1538.PNG" type="Texture" id=15]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1541.PNG" type="Texture" id=16]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1546.PNG" type="Texture" id=17]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1547.PNG" type="Texture" id=18]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1550.PNG" type="Texture" id=19]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1551.PNG" type="Texture" id=20]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1548.PNG" type="Texture" id=21]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1555.PNG" type="Texture" id=22]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1552.PNG" type="Texture" id=23]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1554.PNG" type="Texture" id=24]
[ext_resource path="res://Enemies/EarthLucosa/Sprites/IMG_1553.PNG" type="Texture" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 9 )

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.458333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333 ),
"transitions": PoolRealArray( 1, 1.46409, 1, 1.07177, 0.965936, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/ArmSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.291667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/ArmSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333 ),
"transitions": PoolRealArray( 1, 0.517632, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 22 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SpearAttackAim"
length = 0.0416667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/ArmSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.2974 ),
"update": 1,
"values": [ ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.375
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/AttackIndicator:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.208333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/AttackIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.291667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/AttackIndicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.291667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/Sprite:offset:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Graphics/ArmSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Graphics/ArmSprite:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.001, 0.0416667, 0.0833333, 0.125 ),
"transitions": PoolRealArray( 1.31951, 30.91, 1.46409, 1.27456 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Graphics/ArmSprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="EarthLucosa" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Graphics"]
visible = false
margin_left = -5.0
margin_top = -10.0
margin_right = 5.0
margin_bottom = 10.0
color = Color( 0.67451, 0.427451, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackIndicator" type="Polygon2D" parent="Graphics"]
scale = Vector2( 1e-05, 1 )
color = Color( 0.937255, 0.45098, 0.294118, 1 )
texture = ExtResource( 4 )
polygon = PoolVector2Array( 0, -2, 0, 2, 42, 2, 42, -2 )

[node name="Sprite" type="Sprite" parent="Graphics"]
position = Vector2( 0, -1 )
scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 17 )
offset = Vector2( -80, 0 )

[node name="ArmSprite" type="Sprite" parent="Graphics"]
position = Vector2( 1.67, 0 )
scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 23 )
offset = Vector2( -90, -6 )

[node name="EnemyData" parent="." instance=ExtResource( 1 )]
deathShards = 2
maxHp = 7
colArea = NodePath("../CollisionShape2D")

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 13, 0 )

[node name="GroundRayCast" type="RayCast2D" parent="."]
position = Vector2( 5, 10 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="StandTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SignalArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -4 )
oneoff = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SignalArea"]
polygon = PoolVector2Array( 0, 0, 31, 17, 37, 0, 25, -18, 0, -27 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Run = SubResource( 2 )
anims/SpearAttack = SubResource( 3 )
anims/SpearAttackAim = SubResource( 4 )
anims/SpearAttackWindup = SubResource( 5 )
